fix horizontal scroll

--- a/iwd-app/public/styles.css
+++ b/iwd-app/public/styles.css
@@ -734,6 +734,10 @@ video {
   width: 33.333333%;
 }
 
+.w-2\/3 {
+  width: 66.666667%;
+}
+
 .w-3\/4 {
   width: 75%;
 }
@@ -770,26 +774,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[1\/\] {
-  width: 1/;
-}
-
-.w-\[1\/3\] {
-  width: 1/3;
-}
-
-.w-\[1\/6\] {
-  width: 1/6;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-2\/3 {
-  width: 66.666667%;
 }
 
 .flex-row {
