--- a/iwd-app/src/components/organizers-section/organizers.css
+++ b/iwd-app/src/components/organizers-section/organizers.css
@@ -2,7 +2,7 @@
 .organizers-div {
     width: 100%;
     background-color: rgb(255, 255, 255);
-    padding:200px;
+    /* padding:200px; */
     padding-bottom:150px;
     padding-top: 30px;
     position: relative;
